feat：混合搜索（向量+BM25）、用专门的 reranker 模型对候选商品排序